added pipeline to prefetch Firestore ratings